adapted tests to half matrix computation